--- a/requirements.txt
+++ b/requirements.txt
@@ -6,9 +6,11 @@ cryptography==36.0.1
 h11==0.13.0
 idna==3.3
 outcome==1.1.0
+pyaml==21.10.1
 pycparser==2.21
 pyOpenSSL==22.0.0
 PySocks==1.7.1
+PyYAML==6.0
 selenium==4.1.2
 sniffio==1.2.0
 sortedcontainers==2.4.0
